Add back botton to detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,13 @@
             android:label="Experience Detail" />
         <activity
             android:name=".activity.ServiceDetailActivity"
-            android:label="Service Detail" />
+            android:label="Service Detail"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+        </activity>
         <activity
             android:name=".activity.QuestionsAnswersActivity"
             android:label="Q and A" />
