--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBwBIsBAYbttYt0Ni_i_KqLIo_NwbelELM"/>
         <activity android:name=".activity.MainActivity"
                   android:label=""
                   android:theme="@style/AppTheme.NoActionBar">
