Parse JSON object to ItemViewDTO java object and clean up the code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    compileOnly 'org.projectlombok:lombok:1.18.4'
+    implementation 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
 }
